[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-context-compressor"
version = "0.1.0"
description = "Lightweight LLM context compression — no transformers, no GPU required"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Wiktor Barszcz" }]
requires-python = ">=3.9"
dependencies = []
keywords = ["llm", "compression", "context", "rag", "prompt", "token"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
]

[project.scripts]
llm-compress = "context_compressor:_cli"

[project.urls]
Homepage = "https://github.com/barszcz/llm-context-compressor"
Issues = "https://github.com/barszcz/llm-context-compressor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["context_compressor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
